# nba_data

./: .gitignore  README.md  nba_scraper.py  pyproject.toml  run_tests.py
config/: config_prod.toml  config_uat.toml
src/: nba_scraper.py  utils.py
tests/: test_nba_scraper.py
